<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pakaian Bagus</string>
    <string name="home">Home</string>
    <string name="stock_opname">Stock</string>
    <string name="barang_masuk">Barang Masuk</string>
    <string name="input_harian">Input Harian</string>
    <string name="history">History</string>
    <string name="toolbar_title">Toolbar title</string>
    <string name="todo">TODO</string>
    <string name="lorem_ipsum">Lorem Ipsum dolor sit amen lorem ipsum</string>
    <string name="mark_description_android_src">mark description android:src=</string>
    <string name="share_description">share description</string>
    <string name="checklist">CHECKLIST</string>
    <string name="date">2019 June 25</string>
    <string name="kunjungan" tools:ignore="ExtraTranslation">KUNJUNGAN</string>
    <string name="spg">SPG</string>
    <string name="mutasi_spg">MUTASI SPG</string>
    <string name="inventaris">INVENTARIS</string>
    <string name="mutasi_barang">Mutasi Barang</string>
    <string name="tambah">Tambah</string>
    <string name="spg_name">Dendi Santoso</string>
    <string name="spg_address">Jl. Batik Saketi No. 7</string>
    <string name="tambah_barang">TAMBAH BARANG</string>
    <string name="nama_barang">NAMA BARANG</string>
    <string name="qty">QTY</string>
    <string name="checkin">CHECKIN</string>
    <string name="deskripsi">DESKRIPSI</string>
    <string name="laporan_pengeluaran">LAPORAN PENGELUARAN</string>
    <string name="photo_counter">PHOTO COUNTER</string>
    <string name="sapu">Sapu</string>
    <string name="_1_pcs">1 pcs</string>
    <string name="ubah">Ubah</string>
    <string name="jeans_blue">Jeans Blue</string>
    <string name="no_pengiriman">NO PENGIRIMAN</string>
    <string name="article_barang">BRG-A1-20</string>
    <string name="verifikasi">VERIFIKASI</string>
    <string name="detail_barang_masuk">DETAIL BARANG MASUK</string>
    <string name="ubah_qty">UBAH QTY</string>
    <string name="detail_spg">Detail SPG</string>
    <string name="asal_toko">ASAL TOKO</string>
    <string name="pindah_toko">TUJUAN TOKO</string>
    <string name="sales_report">Sales Report</string>
    <string name="penjualan_kompetitor">Penjualan Kompetitor</string>
    <string name="harga">Harga</string>
    <string name="diskon">Diskon</string>
    <string name="tujuan_mutasi">TUJUAN MUTASI</string>
    <string name="barang">BARANG</string>
    <string name="katalog">Katalog</string>
    <string name="penjualan">Penjualan</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="apply">APPLY</string>
    <string name="hapus">Hapus</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acara">Acara</string>
    <string name="download">Download</string>
</resources>
