<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutDetailBarangMasuk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_list_inventaris"
    android:orientation="horizontal"
    android:layout_marginBottom="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNamaBarang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:text="@string/jeans_blue"
            android:textSize="13sp"
            android:textColor="@color/NormalColorText"/>

        <TextView
            android:id="@+id/tvQty"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:text="@string/_1_pcs"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_more_vert_black_24dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</LinearLayout>