<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DialogTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="MUTASI SPG"
            android:textColor="@color/Black"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_close_black_24dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="2dp"
        android:background="@color/NormalGreyText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etDialogAsalToko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="13sp"
            android:gravity="center"
            android:background="@drawable/background_input"
            android:hint="@string/asal_toko"/>

        <EditText
            android:id="@+id/etDialogPindahToko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:textSize="13sp"
            android:gravity="center"
            android:background="@drawable/background_input"
            android:hint="@string/pindah_toko"/>

        <EditText
            android:id="@+id/etDialogDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:textSize="13sp"
            android:gravity="center"
            android:background="@drawable/background_input"
            android:hint="@string/deskripsi"/>

        <Button
            android:id="@+id/btnDialogTambah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:textSize="13sp"
            android:clickable="true"
            android:background="@drawable/background_button"
            android:textColor="@color/White"
            android:text="MUTASI"
            tools:ignore="HardcodedText"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>