<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseLayoutInputHarian"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSteelBlue"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkSlateBlue"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_padding_size_small"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_keyboard_backspace_white_24dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLength="25"
                android:maxLines="1"
                android:text="PENJUALAN"
                android:textAllCaps="true"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnBarcode"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/todo"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_scan_barcode" />

            <ImageView
                android:id="@+id/btnAdd"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/todo"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_add_white" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tabSalesReport"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sales_report"
                android:textColor="@color/DarkSlateBlue"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/DarkSlateBlue" />

            <TextView
                android:id="@+id/tabPenjualan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/penjualan_kompetitor"
                android:textColor="@color/Background"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/DarkSlateBlue" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:text="date"
        android:textAllCaps="true"
        android:textColor="@color/DarkSlateBlue"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        tools:ignore="UnusedAttribute">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSales"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPenjualan"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:visibility="visible" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/White"
        android:background="@drawable/background_button"
        android:layout_margin="10dp"
        android:visibility="visible" />

</LinearLayout>